StickyNavbar with Button ProfileManu and Login Form

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     -->
   <title>RADOM</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="path/to/font-awesome/css/all.min.css" />
 </head>
 
 <body>
